Added test case test_seg_stress.py; make seg_stress

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,13 @@ all: $(LIB_OPENDIS)
 SegSegForce.o: SegSegForce.c
 	gcc -c $^
 
-$(LIB_OPENDIS): SegSegForce.o
+SegSegForce_SBN1.o: SegSegForce_SBN1.c
+	gcc -c $^
+
+SegmentStress.o: SegmentStress.c
+	gcc -c $^
+
+$(LIB_OPENDIS): SegSegForce.o SegSegForce_SBN1.o SegmentStress.o
 	gcc -shared $^ -o $@
 
 clean:
