Change how python paths to lib and python folders are added

--- a/tests/test1_node_force/makefile
+++ b/tests/test1_node_force/makefile
@@ -1,10 +1,7 @@
 
 .PHONY: all help clean
 
-all: help segseg_force seg_stress
-
-# modify the PYTHONPATH variable
-PYTHONPATH=$(abspath $(CURDIR)/../../lib):$(abspath $(CURDIR)/../../python):
+all: help seg_stress segseg_force loop_force 
 
 help: 
 	@echo "make sure environmental variable PYTHONPATH is present"
@@ -14,11 +11,14 @@ help:
 	@echo " your PYTHONPATH=$(PYTHONPATH)"
 	@echo "      CTYPESGEN_DIR=$(CTYPESGEN_DIR)"
 
+seg_stress: test_seg_stress.py
+	python3 test_seg_stress.py
+
 segseg_force: test_segseg_force.py
 	python3 test_segseg_force.py
 
-seg_stress: test_seg_stress.py
-	python3 test_seg_stress.py
+loop_force: test_loop_force.py
+	python3 test_loop_force.py
 
 clean: 
 	@echo "nothing to clean"	
