Implemented Elasticity_SBA and Elasticity_SBN1_SBA force_mode; test by python3 test_loop_force.py

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,10 +8,13 @@ SegSegForce.o: SegSegForce.c
 SegSegForce_SBN1.o: SegSegForce_SBN1.c
 	gcc -c $^
 
+SegSegForce_SBN1_SBA.o: SegSegForce_SBN1_SBA.c
+	gcc -c $^
+
 SegmentStress.o: SegmentStress.c
 	gcc -c $^
 
-$(LIB_OPENDIS): SegSegForce.o SegSegForce_SBN1.o SegmentStress.o
+$(LIB_OPENDIS): SegSegForce.o SegSegForce_SBN1.o SegSegForce_SBN1_SBA.o SegmentStress.o
 	gcc -shared $^ -o $@
 
 clean:
