--- a/tests/test1_node_force/makefile
+++ b/tests/test1_node_force/makefile
@@ -1,7 +1,7 @@
 
 .PHONY: all help clean
 
-all: help seg_stress segseg_force loop_force 
+all: help seg_stress segseg_force loop_force disnet_loop_force
 
 help: 
 	@echo "make sure environmental variable PYTHONPATH is present"
@@ -19,6 +19,9 @@ segseg_force: test_segseg_force.py
 
 loop_force: test_loop_force.py
 	python3 test_loop_force.py
+
+disnet_loop_force: test_disnet_loop_force.py
+	python3 test_disnet_loop_force.py
 
 clean: 
 	@echo "nothing to clean"	
