Removed dd_proto.py (monolithic class); should use pydis package from now on

--- a/tests/test1_node_force/makefile
+++ b/tests/test1_node_force/makefile
@@ -1,7 +1,7 @@
 
 .PHONY: all help clean
 
-all: help seg_stress segseg_force loop_force disnet_loop_force
+all: help seg_stress segseg_force disnet_loop_force
 
 help: 
 	@echo "make sure environmental variable PYTHONPATH is present"
@@ -16,9 +16,6 @@ seg_stress: test_seg_stress.py
 
 segseg_force: test_segseg_force.py
 	python3 test_segseg_force.py
-
-loop_force: test_loop_force.py
-	python3 test_loop_force.py
 
 disnet_loop_force: test_disnet_loop_force.py
 	python3 test_disnet_loop_force.py
