Renamed libopendis.so to libpydis.so and opendis.py to pydis_lib.py

--- a/core/pydis/calforce/Makefile
+++ b/core/pydis/calforce/Makefile
@@ -1,6 +1,6 @@
-LIB_OPENDIS = ../../../lib/libopendis.so
+LIB_PYDIS_SO = ../../../lib/libpydis.so
 
-all: $(LIB_OPENDIS)
+all: $(LIB_PYDIS_SO)
 
 SegSegForce.o: SegSegForce.c
 	gcc -c -O3 $^
@@ -17,7 +17,7 @@ SegmentStress.o: SegmentStress.c
 StressDueToSeg.o: StressDueToSeg.c
 	gcc -c -O3 $^
 
-$(LIB_OPENDIS): SegSegForce.o SegSegForce_SBN1.o SegSegForce_SBN1_SBA.o SegmentStress.o StressDueToSeg.o
+$(LIB_PYDIS_SO): SegSegForce.o SegSegForce_SBN1.o SegSegForce_SBN1_SBA.o SegmentStress.o StressDueToSeg.o
 	gcc -shared $^ -o $@
 
 clean:
