--- a/python/makefile
+++ b/python/makefile
@@ -10,12 +10,11 @@
 
 CC_PREPROCESS   = ${CC} -E ${DEFS}
 
-HEADER_PATH = ../core/paradis/calforce
+HEADER_PATH = ../core/pydis/calforce
 HEADER_FILES = $(HEADER_PATH)/SegSegForce.h $(HEADER_PATH)/SegmentStress.h $(HEADER_PATH)/StressDueToSeg.h $(HEADER_PATH)/SegSegForce_SBN1.h $(HEADER_PATH)/SegSegForce_SBN1_SBA.h
-LIB_OPENDIS  = ../lib/libopendis.so
+LIB_PYDIS_SO  = ../lib/libpydis.so
 
-# Add _gpu to target name
-OPENDIS_PY = opendis.py
+PYDIS_LIB_PY = pydis_lib.py
 
 ifndef CTYPESGEN_DIR
   $(info Install Ctypesgen by)
@@ -27,12 +26,12 @@ endif
 
 .PHONY: all clean
 
-all: $(OPENDIS_PY)
+all: $(PYDIS_LIB_PY)
 
-$(OPENDIS_PY): ${HEADER_FILES} ${LIB_OPENDIS}
-	${CTYPESGEN_DIR}/run.py --cpp="${CC_PREPROCESS}" ${HEADER_FILES} -l ${LIB_OPENDIS} -o $@
+$(PYDIS_LIB_PY): ${HEADER_FILES} ${LIB_PYDIS_SO}
+	${CTYPESGEN_DIR}/run.py --cpp="${CC_PREPROCESS}" ${HEADER_FILES} -l ${LIB_PYDIS_SO} -o $@
 	mv $@ ../lib
 
 clean: 
-	rm -rf $(OPENDIS_PY) *.pyc __pycache__
+	rm -rf $(PYDIS_LIB_PY) *.pyc __pycache__
 
