Change ar r to ld -r in pydis Makefiles

--- a/core/pydis/util/Makefile
+++ b/core/pydis/util/Makefile
@@ -2,18 +2,48 @@ LIB_PYDIS_UTIL = pydis_util.o
 
 all: $(LIB_PYDIS_UTIL)
 
+InitHome.o: InitHome.c
+	gcc -c -O3 $^ -I ../include
+
+ParadisInit.o: ParadisInit.c
+	gcc -c -O3 $^ -I ../include
+
+Param.o: Param.c
+	gcc -c -O3 $^ -I ../include
+
+Parse.o: Parse.c
+	gcc -c -O3 $^ -I ../include
+
+DisableUnneededParams.o: DisableUnneededParams.c
+	gcc -c -O3 $^ -I ../include
+
+InitCellDomains.o: InitCellDomains.c
+	gcc -c -O3 $^ -I ../include
+
+InitCellNatives.o: InitCellNatives.c
+	gcc -c -O3 $^ -I ../include
+
+InitCellNeighbors.o: InitCellNeighbors.c
+	gcc -c -O3 $^ -I ../include
+
+Timer.o: Timer.c
+	gcc -c -O3 $^ -I ../include
+
+
+
+
 Util_subset.o: Util_subset.c
 	gcc -c -O3 $^ -I ../include
 
 Stub.o: Stub.c
 	gcc -c -O3 $^ -I ../include
 
-$(LIB_PYDIS_UTIL): Util_subset.o Stub.o
+$(LIB_PYDIS_UTIL): InitHome.o ParadisInit.o Param.o Parse.o DisableUnneededParams.o InitCellDomains.o InitCellNatives.o InitCellNeighbors.o Timer.o Util_subset.o Stub.o
 	$(info --------------------------------------------------------------------)
 	$(info check Stub.c for functions still need to be implemented)
 	$(info --------------------------------------------------------------------)
 	$(info )
-	ar r $@ $^ 
+	ld -r $^ -o $@
 
 clean:
 	rm -f *.o
