Added util/Util_modified.c in core/pydis to hold functions modified from ParaDiS

--- a/core/pydis/util/Makefile
+++ b/core/pydis/util/Makefile
@@ -29,8 +29,8 @@ InitCellNeighbors.o: InitCellNeighbors.c
 Timer.o: Timer.c
 	gcc -c -O3 $^ -I ../include
 
-
-
+Util_modified.o: Util_modified.c
+	gcc -c -O3 $^ -I ../include
 
 Util_subset.o: Util_subset.c
 	gcc -c -O3 $^ -I ../include
@@ -38,7 +38,7 @@ Util_subset.o: Util_subset.c
 Stub.o: Stub.c
 	gcc -c -O3 $^ -I ../include
 
-$(LIB_PYDIS_UTIL): InitHome.o ParadisInit.o Param.o Parse.o DisableUnneededParams.o InitCellDomains.o InitCellNatives.o InitCellNeighbors.o Timer.o Util_subset.o Stub.o
+$(LIB_PYDIS_UTIL): InitHome.o ParadisInit.o Param.o Parse.o DisableUnneededParams.o InitCellDomains.o InitCellNatives.o InitCellNeighbors.o Timer.o Util_modified.o Util_subset.o Stub.o
 	$(info --------------------------------------------------------------------)
 	$(info check Stub.c for functions still need to be implemented)
 	$(info --------------------------------------------------------------------)
