--- a/python/makefile
+++ b/python/makefile
@@ -10,8 +10,14 @@
 
 CC_PREPROCESS   = ${CC} -E ${DEFS}
 
-HEADER_PATH = ../core/pydis/calforce
-HEADER_FILES = $(HEADER_PATH)/SegSegForce.h $(HEADER_PATH)/SegmentStress.h $(HEADER_PATH)/StressDueToSeg.h $(HEADER_PATH)/SegSegForce_SBN1.h $(HEADER_PATH)/SegSegForce_SBN1_SBA.h
+CALFORCE_HEADER_PATH = ../core/pydis/calforce
+CALFORCE_HEADER_FILES = $(CALFORCE_HEADER_PATH)/SegSegForce.h $(CALFORCE_HEADER_PATH)/SegmentStress.h $(CALFORCE_HEADER_PATH)/StressDueToSeg.h $(CALFORCE_HEADER_PATH)/SegSegForce_SBN1.h $(CALFORCE_HEADER_PATH)/SegSegForce_SBN1_SBA.h
+
+INCLUDE_HEADER_PATH = ../core/pydis/include
+INCLUDE_HEADER_FILES = $(INCLUDE_HEADER_PATH)/Home.h $(INCLUDE_HEADER_PATH)/Init.h $(INCLUDE_HEADER_PATH)/ParadisProto.h
+
+HEADER_FILES = ${CALFORCE_HEADER_FILES} ${INCLUDE_HEADER_FILES}
+
 LIB_PYDIS_SO  = ../lib/libpydis.so
 
 PYDIS_LIB_PY = pydis_lib.py
