Move pydis to core; Define DisNet_BASE class

--- a/core/pydis/python/makefile
+++ b/core/pydis/python/makefile
@@ -10,15 +10,16 @@
 
 CC_PREPROCESS   = ${CC} -E ${DEFS}
 
-CALFORCE_HEADER_PATH = ../core/pydis/calforce
+CALFORCE_HEADER_PATH = ../c/calforce
 CALFORCE_HEADER_FILES = $(CALFORCE_HEADER_PATH)/SegSegForce.h $(CALFORCE_HEADER_PATH)/SegmentStress.h $(CALFORCE_HEADER_PATH)/StressDueToSeg.h $(CALFORCE_HEADER_PATH)/SegSegForce_SBN1.h $(CALFORCE_HEADER_PATH)/SegSegForce_SBN1_SBA.h
 
-INCLUDE_HEADER_PATH = ../core/pydis/include
+INCLUDE_HEADER_PATH = ../c/include
 INCLUDE_HEADER_FILES = $(INCLUDE_HEADER_PATH)/Home.h $(INCLUDE_HEADER_PATH)/Init.h $(INCLUDE_HEADER_PATH)/ParadisProto.h
 
 HEADER_FILES = ${CALFORCE_HEADER_FILES} ${INCLUDE_HEADER_FILES}
 
-LIB_PYDIS_SO  = ../lib/libpydis.so
+LIB_PYDIS_PATH  = ../../../lib
+LIB_PYDIS_SO  = libpydis.so
 
 PYDIS_LIB_PY = pydis_lib.py
 
@@ -34,9 +35,9 @@ endif
 
 all: $(PYDIS_LIB_PY)
 
-$(PYDIS_LIB_PY): ${HEADER_FILES} ${LIB_PYDIS_SO}
+$(PYDIS_LIB_PY): ${HEADER_FILES} ${LIB_PYDIS_PATH}/${LIB_PYDIS_SO}
 	${CTYPESGEN_DIR}/run.py --cpp="${CC_PREPROCESS}" ${HEADER_FILES} -l ${LIB_PYDIS_SO} -o $@
-	mv $@ ../lib
+	mv $@ ../../../lib
 
 clean: 
 	rm -rf $(PYDIS_LIB_PY) *.pyc __pycache__
