Changed Kokkos options from ON to On (as needed by KOKKOS)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,18 @@ project(OpenDiS LANGUAGES CXX)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE On) # should we use ON or On ?
 set(CMAKE_INSTALL_PREFIX install)
 
-option(Kokkos_ENABLE_SERIAL "kokkos enable serial" ON)
-option(Kokkos_ENABLE_OPENMP "kokkos enable openmp" ON)
-option(Kokkos_ENABLE_CUDA "kokkos enable cuda" OFF)
-option(Kokkos_ENABLE_CUDA_LAMBDA "kokkos enable cuda lambda" OFF)
-option(Kokkos_ENABLE_HIP "kokkos enable hip" OFF)
+option(Kokkos_ENABLE_SERIAL "kokkos enable serial" On)
+option(Kokkos_ENABLE_OPENMP "kokkos enable openmp" On)
+option(Kokkos_ENABLE_CUDA "kokkos enable cuda" On)
+option(Kokkos_ENABLE_CUDA_LAMBDA "kokkos enable cuda lambda" On)
+option(Kokkos_ENABLE_HIP "kokkos enable hip" Off)
 
+include(cmake/sys.cmake.ext OPTIONAL)
 
-#add_subdirectory(core)
+#add_subdirectory(core/exadis)
 add_subdirectory(core/exadis/kokkos)
 
 #enable_testing()
