--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(OpenDiS LANGUAGES CXX)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
-set(CMAKE_POSITION_INDEPENDENT_CODE On) # should we use ON or On ?
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_INSTALL_PREFIX install)
 
 option(Kokkos_ENABLE_SERIAL "kokkos enable serial" On)
