Allow user to include cmake/sys.cmake. file if SYS is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,27 @@ option(Kokkos_ENABLE_CUDA "kokkos enable cuda" Off)
 option(Kokkos_ENABLE_CUDA_LAMBDA "kokkos enable cuda lambda" Off)
 option(Kokkos_ENABLE_HIP "kokkos enable hip" Off)
 
-# the options can be modified by the following file if it exists
-include(cmake/sys.cmake.ext OPTIONAL)
+message("***************************************")
+if(DEFINED SYS)
+  if(EXISTS "${PROJECT_SOURCE_DIR}/cmake/sys.cmake.${SYS}")
+    message(" options set by cmake/sys.cmake.${SYS}")
+    include(cmake/sys.cmake.${SYS})
+  else()
+    message(" cmake/sys.cmake.${SYS} does not exist")
+  endif()
+else()
+  if(EXISTS "${PROJECT_SOURCE_DIR}/cmake/sys.cmake.ext")
+    message("options set by cmake/sys.cmake.ext")
+    # the options can be modified by the following file if it exists
+    include(cmake/sys.cmake.ext OPTIONAL)
+  else()
+    message(" cmake/sys.cmake.ext does not exist")
+  endif()
+endif()
+message("***************************************")
 
-#add_subdirectory(core/exadis)
-add_subdirectory(core/exadis/kokkos)
+add_subdirectory(core/exadis)
+#add_subdirectory(core/exadis/kokkos)
 
 #enable_testing()
 #add_subdirectory(ctests)
