Adjusted CMake files to compile on MC2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,6 @@ option(Kokkos_ENABLE_CUDA "kokkos enable cuda" Off)
 option(Kokkos_ENABLE_CUDA_LAMBDA "kokkos enable cuda lambda" Off)
 option(Kokkos_ENABLE_HIP "kokkos enable hip" Off)
 
-add_subdirectory(core/exadis)
-#add_subdirectory(core/exadis/kokkos)
-
-# this section has to be after core/exadis or core/exadis/kokkos to avoid infinite loop
 message("***************************************")
 if(DEFINED SYS)
   if(EXISTS "${PROJECT_SOURCE_DIR}/cmake/sys.cmake.${SYS}")
@@ -37,6 +33,17 @@ else()
 endif()
 message(" CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
 message("***************************************")
+
+add_subdirectory(core/exadis)
+#add_subdirectory(core/exadis/kokkos)
+
+
+
+# this section has to be after core/exadis or core/exadis/kokkos to avoid infinite loop
+if(Kokkos_ENABLE_CUDA)
+  set(CMAKE_CXX_COMPILER ${PROJECT_SOURCE_DIR}/core/exadis/kokkos/bin/nvcc_wrapper)
+endif()
+
 
 #enable_testing()
 #add_subdirectory(ctests)
