--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,5 @@
 cmake_minimum_required(VERSION 3.16.8)
 
-project(OpenDiS LANGUAGES CXX)
-
-set(CMAKE_DISABLE_SOURCE_CHANGES ON)
-set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
-
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_INSTALL_PREFIX install)
-
 option(Kokkos_ENABLE_SERIAL "kokkos enable serial" On)
 option(Kokkos_ENABLE_OPENMP "kokkos enable openmp" On)
 option(Kokkos_ENABLE_CUDA "kokkos enable cuda" Off)
@@ -16,14 +8,14 @@ option(Kokkos_ENABLE_HIP "kokkos enable hip" Off)
 
 message("***************************************")
 if(DEFINED SYS)
-  if(EXISTS "${PROJECT_SOURCE_DIR}/cmake/sys.cmake.${SYS}")
+  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/cmake/sys.cmake.${SYS}")
     message(" options set by cmake/sys.cmake.${SYS}")
     include(cmake/sys.cmake.${SYS})
   else()
     message(" cmake/sys.cmake.${SYS} does not exist")
   endif()
 else()
-  if(EXISTS "${PROJECT_SOURCE_DIR}/cmake/sys.cmake.ext")
+  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/cmake/sys.cmake.ext")
     message("options set by cmake/sys.cmake.ext")
     # the options can be modified by the following file if it exists
     include(cmake/sys.cmake.ext OPTIONAL)
@@ -31,18 +23,25 @@ else()
     message(" cmake/sys.cmake.ext does not exist")
   endif()
 endif()
+
+if(Kokkos_ENABLE_CUDA STREQUAL "On")
+    set(CMAKE_CXX_COMPILER ${CMAKE_CURRENT_SOURCE_DIR}/core/exadis/kokkos/bin/nvcc_wrapper)
+endif()
+
 message(" CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
 message("***************************************")
 
+
+project(OpenDiS LANGUAGES CXX)
+
+set(CMAKE_DISABLE_SOURCE_CHANGES ON)
+set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
+
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_INSTALL_PREFIX install)
+
 add_subdirectory(core/exadis)
 #add_subdirectory(core/exadis/kokkos)
-
-
-
-# this section has to be after core/exadis or core/exadis/kokkos to avoid infinite loop
-if(Kokkos_ENABLE_CUDA)
-  set(CMAKE_CXX_COMPILER ${PROJECT_SOURCE_DIR}/core/exadis/kokkos/bin/nvcc_wrapper)
-endif()
 
 
 #enable_testing()
