--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser furo sphinx-inline-tabs
+          pip install sphinx sphinx_rtd_theme myst_parser furo sphinx-inline-tabs sphinx-copybutton
 
       - name: Sphinx build
         run: |
