--- a/core/pydis/c/tests/CMakeLists.txt
+++ b/core/pydis/c/tests/CMakeLists.txt
@@ -1,11 +1,18 @@
 cmake_minimum_required(VERSION 3.14)
 
-find_package(PythonLibs REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
-add_executable(test_calforce)
+find_package(PythonLibs)
+#find_package(PythonLibs REQUIRED)
+if(DEFINED ${PYTHON_INCLUDE_DIRS})
+    add_executable(test_calforce)
+    include_directories(${PYTHON_INCLUDE_DIRS})
 
-target_sources(test_calforce PRIVATE test_calforce.c)
+    target_sources(test_calforce PRIVATE test_calforce.c)
 
-add_compile_definitions("SOURCE_ROOT=${CMAKE_SOURCE_DIR}")
+    add_compile_definitions("SOURCE_ROOT=${CMAKE_SOURCE_DIR}")
 
-target_link_libraries(test_calforce ${PYTHON_LIBRARIES})
+    target_link_libraries(test_calforce ${PYTHON_LIBRARIES})
+else()
+    message("skips building core/pydis/c/tests/")
+endif(DEFINED ${PYTHON_INCLUDE_DIRS})
+
+
