Removed case-sensitive check for Kokkos_ENABLE_CUDA option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ else()
   endif()
 endif()
 
-if(Kokkos_ENABLE_CUDA STREQUAL "On")
+if(Kokkos_ENABLE_CUDA)
     set(CMAKE_CXX_COMPILER ${CMAKE_CURRENT_SOURCE_DIR}/core/exadis/kokkos/bin/nvcc_wrapper)
 endif()
 
